solc_ossfuzz_seed_corpus/test_sol/test_485b337885ef7f6d400798737545bd872f9f00ebdc7fa78f1d76f890f60dd898_2ba28caf0845c39008b7bbb561f50e0589bd00d8_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(bytes12 i0)     returns(address o0)
{
  assembly
  {
    for 
    {
    }
    i0
    {
      for 
      {
        switch mload(mod(iszero(115792089237316195423570985008687907853269984665640564039457584007913129639935), 2048))
        case 0
        {
          revert(115792089237316195423570985008687907853269984665640564039457584007913129639935, o0)
          i0 := i0
        }
        case 0
        {
        }
        case 115792089237316195423570985008687907853269984665640564039457584007913129639935
        {
          stop()
          o0 := o0
        }
      }
      115792089237316195423570985008687907853269984665640564039457584007913129639935
      {
        switch difficulty()
        default
        {
        }
      }
      {
        {
          function af0(ai0, ai1, ai2, ai3) -> ao0, ao1, ao2
          {
            return(ao1, ao0)
            if ao1
            {
              for 
              {
                let al0 := sload(ao1)
                ao2 := ai2
              }
              extcodehash(58894865080537064195959115787040715868686884353756060265839618878202694840059)
              {
              }
              {
              }
            }
          }
        }
        i0 := lt(115792089237316195423570985008687907853269984665640564039457584007913129639935, 0)
      }
    }
    {
    }
    switch o0
    default
    {
    }
    revert(mload(mod(i0, 2048)), 0)
    pop(o0)
    return(72442723291307199753097867527229152530352934826106267324088489186101956656690, i0)
  }
  return (address(0x0000000000000000000000000000000000000004));
  assembly
  {
    {
      {
        i0 := shr(extcodehash(115792089237316195423570985008687907853269984665640564039457584007913129639935), 64696161993667026634615839108463843654164547782805640606297794597477833162034)
      }
    }
  }
}
enum EN0 {
  M0, M1, M2, M3, M4, M5, M6, M7,
  M8, M9, M10, M11, M12, M13, M14, M15,
  M16, M17, M18, M19, M20, M21, M22, M23,
  M24, M25
}
bool constant cons0 = (((~((~(((uint88(0) ** uint256(48142435516265754923212807030059754937785549430819218905084216403724768577569)) ** uint104(0)))))) ** uint72(4722366482869645213695)) >= uint88(309485009821345068724781055));
type T0 is bool;
error er0(function (string memory, bool, uint24) external   returns (uint8) ep0);
pragma solidity >= 0.0.0;
library L0 {
  function f1(bool[2] memory i0,address i1) public    returns(uint192 o0,bytes24 o1)
  {
    o1 ^= bytes24(0x000000000000000000000000000000000000000000000000);
  }
  bool public constant cons1 = ((true != (!(false))) || false);
  function f2(function (bytes8, bool, uint216) external   i0,bytes20 i1,bool i2) external    returns(bytes6 o0)
  {
    i1 &= bytes20(address(0xFFfFfFffFFfffFFfFFfFFFFFffFFFffffFfFFFfF));
    for(    false;
true;
)
    {
    }
  }
  modifier m0() 
  {
    _;
  }
  type T1 is bytes16;
  function f3(string memory i0,address i1,bytes memory i2) external  m0()  returns(int232 o0)
  {
  }
  event ev0();
}
// ----
// DeclarationError 6792: (su0.sol:401-427): Duplicate case "0" defined.
// Warning 9592: (su0.sol:685-740): "switch" statement with only a default case.
// Warning 9592: (su0.sol:1352-1385): "switch" statement with only a default case.
// Warning 3149: (su0.sol:2007-2106): The result type of the exponentiation operation is equal to the type of the first operand (uint88) ignoring the (larger) type of the second operand (uint256) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// Warning 3149: (su0.sol:2006-2121): The result type of the exponentiation operation is equal to the type of the first operand (uint88) ignoring the (larger) type of the second operand (uint104) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
